tests/074_invalid_lvalues_funcall.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/074_invalid_lvalues_funcall.pirx:10:5: invalid assignment target: (dummy)
Error: exit status 1
