tests/074_invalid_lvalues_funcall.pirx
func dummy(): int {
    return 42;
}

func main(): int {
    var x = 5;
    
    // This should be a compilation error:
    // Cannot assign to function call result (rvalue)
    dummy() = x;
    
    return 0;
}
